Trying to fix the js urls

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,10 +1,10 @@
 
 {% if page.type == 'home' %}
-  <script src="{{ '/assets/js/home.js' | absolute_url }}"></script>
+  <script src="{{ site.url }}/assets/js/home.js"></script>
 {% endif %}
 {% if page.type == 'browse' %}
-  <script src="{{ '/assets/js/browse.js' | absolute_url }}"></script>
+  <script src="{{ site.url }}/assets/js/browse.js"></script>
 {% endif %}
 {% if page.type == 'profile' %}
-  <script src="{{ '/assets/js/profile.js' | absolute_url }}"></script>
+  <script src="{{ site.url }}/assets/js/profile.js"></script>
 {% endif %}
